# vessel-finder-server

./: Dockerfile  Readme.md  docker-compose.yml  requirements.txt  run.py
.github/workflows/: main.yaml
app/: main.py  pyproject.toml
chart/vessel-server/: Chart.yaml  values.yaml
chart/vessel-server/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
chart/vessel-server/templates/tests/: test-connection.yaml
